[Event API] Support webbhook on contract functions/events
